# IRISW106VideoStreaming

./: .gitignore  CMakeLists.txt  README.md  prj.conf
PC_Site/: CMakeLists.txt  h264_decode.c  plot_network_stats.py  show_stream copy.c  show_stream.c  udp_socket_client.c  visualize_h264.c
modules/udp_socket/: udp_socket.c  udp_socket.h
modules/udp_socket copy/: udp_socket.h
modules/wifi_utilities/: wifi_utilities.c
